# perm-banana

./: Check.py  MetaCheck.py  Perm.py  Permission.py  PermissionHandler.py  __init__.py  banana.py  pyproject.toml
.github/workflows/: auto_release.yml  publish.yml  tests.yml
CheckStrategy/: StrategyCheck.py  StrategyHandler.py  StrategyPermission.py  StrategyPermissions.py
perm_banana/: __init__.py
tests/: test_Permission.py  test_PermissionHandler.py  test_banana.py  test_checks.py  test_imports.py
